cs: add documentation for updateOpening
